Bug 1840804 - Make `TextEditor::OnBlur` stop finalizing `Selection` if new element already gets focus r=m_kato, a=dmeehan

Before bug 1770874, `EditorBase::OnBlur` checked that for both `TextEditor`
and `HTMLEditor`.  However, accidentally, I removed the check from `TextEditor`.
Therefore, a call of `EditorBase::FinalizeSelection()` will hide the caret
even after another editor gets focus.

Therefore, this patch just take it back into `TextEditor::OnBlur`.

Note that I don't think the design mode handling is required there because
`TextEditor`s shouldn't be created in the design mode document.

Differential Revision: https://phabricator.services.mozilla.com/D182468